syntax = "proto3";
package proto;
option go_package = ".;proto";

import "google/protobuf/empty.proto";

service Browser {
    // get the active URL
    rpc BrowserActiveURL (google.protobuf.Empty) returns (BrowserActiveURLResponse);

    // stream active URL every time it changes
    rpc BrowserActiveURLStream (google.protobuf.Empty) returns (stream BrowserActiveURLStreamResponse);

    // get currently selected text
    rpc BrowserSelectedText (google.protobuf.Empty) returns (BrowserSelectedTextResponse);

    // stream selected text every time it changes
    rpc BrowserSelectedTextStream (google.protobuf.Empty) returns (stream BrowserSelectedTextStreamResponse);
}

message BrowserActiveURLResponse {
    string url = 1;
}

message BrowserActiveURLStreamResponse {
    string url = 1;
    string error = 15;
}

message BrowserSelectedTextResponse {
    string text = 1;
    string url = 2;
    string tabTitle = 3;
}

message BrowserSelectedTextStreamResponse {
    string text = 1;
    string url = 2;
    string tabTitle = 3;
    string error = 15;
}

